Force summary to be first in modify area

--- a/CategorizedFields/htdocs/css/base.css
+++ b/CategorizedFields/htdocs/css/base.css
@@ -41,3 +41,7 @@ td.col1, td.col2 {
     border-bottom: 1px solid darkgray;
     color: rgb(153,153,153);
 }
+
+#field-summary {
+    width: 80%;
+}
